# mottomesh

./: .gitignore  Cargo.toml  README.md  nats.conf
.github/workflows/: ci.yml
client-ts/: .gitignore  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client-ts/src/: client.ts  index.ts
client-ts/src/__tests__/: client.test.ts  codec.test.ts  messages.test.ts
client-ts/src/protocol/: codec.ts  messages.ts
client-ts/src/transport/: index.ts  interface.ts  websocket.ts  webtransport.ts
crates/: .gitignore
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  lib.rs  main.rs
crates/gateway/src/auth/: jwt.rs  mod.rs  permissions.rs  session.rs
crates/gateway/src/bridge/: mod.rs  nats.rs
crates/gateway/src/protocol/: codec.rs  messages.rs  mod.rs
crates/gateway/src/transport/: handler.rs  mod.rs  websocket.rs  webtransport.rs
crates/gateway/tests/: integration_test.rs
crates/gateway/tests/common/: client.rs  gateway.rs  jwt.rs  mod.rs  nats.rs
crates/mottomesh/: Cargo.toml
crates/mottomesh/src/: lib.rs
crates/mottomesh/src/wasm/: errors.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
example_web/: README.md  package.json  pnpm-lock.yaml
example_web/src/: App.css  App.tsx
schema/src/: schema.rs
scripts/: regen-sdk.sh
src/: lib.rs  main.rs
src/wasm/: errors.rs
tests/: web_tests.rs
