[package]
name = "mottomesh"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats = "0.42.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
futures = "0.3.31"

[dependencies]
bitcode = "0.6.7"
wasm-bindgen = "0.2.100"
zstd = "0.13.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
