[package]
name = "mottomesh"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats = "0.42.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
futures = "0.3.31"
# Only install compress crate on native 
# And use CompressionStream API on browser in JS (for wasm size reasons)
flate2 = "1.1.2"

[dependencies]
bitcode = { version = "0.6.7", default-features = false, features = ["derive"] }
wasm-bindgen = { version = "0.2.100", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]


[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
