[workspace]
resolver = "2"
members = [
    "crates/mottomesh",
    "crates/server",
    "crates/gateway",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/example/mottomesh"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
