[package]
name = "mottomesh-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mottomesh-gateway"
path = "src/main.rs"

[dependencies]
schema_sdk = { path = "../../schema/generated/rust", default-features = false, features = ["core"] }

# WebTransport
wtransport = { version = "0.6", features = ["self-signed"] }

# WebSocket (axum-based)
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Authentication
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NATS bridge
async-nats = "0.42"

# TLS
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dashmap = "6"

[dev-dependencies]
chrono = "0.4"
tokio-test = "0.4"
tokio-tungstenite = "0.26"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["nats"] }
portpicker = "0.1"
